Sun Jun 19 13:31:26 2011  Shota Fukumori  <sorah@tubusu.net>

	* NEWS: Introduce --hide-skip on test/unit.

Sun Jun 19 10:05:16 2011  Shota Fukumori  <sorah@tubusu.net>

	* lib/test/unit/parallel.rb: Override Test::Unit::TestCase#on_parallel_worker?
	  only when $0 == __FILE__.

	* lib/test/unit/parallel.rb: Run Test::Unit::Worker.run only when
	  $0 == __FILE__.

Sat Jun 18 23:59:24 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (fill_cbuf): finish reading at EOF, and the readconv has
	  been cleared by another thread while io_fillbuf() is waiting at
	  select().  a patch in [ruby-core:37197] by Hiroshi Shirosaki
	  <h.shirosaki AT gmail.com>.  fixed #3840

Sat Jun 18 21:36:29 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_pthread.c: remove GVL_DEBUG

Sat Jun 18 21:32:02 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* vm.c, vm_core.h (rb_vm_stack_to_heap): remove const.
	  It makes compilations warnings.

Sat Jun 18 18:54:15 2011  Koichi Sasada  <ko1@atdot.net>

	* vm.c, vm_core.h (rb_vm_stack_to_heap): fix "const" place.

Sat Jun 18 17:23:38 2011  Tanaka Akira  <akr@fsij.org>

	* eval.c, hash.c, load.c, proc.c, range.c, thread.c, time.c: don't
	  declare internal functions.

	* internal.h, vm_core.h: declare internal functions.

	* array.c: include internal.h.

	* common.mk: update dependency for array.o.

Sat Jun 18 13:39:33 2011  Tanaka Akira  <akr@fsij.org>

	* internal.h: declarations declared in include/ruby/*.h removed.

Sat Jun 18 12:42:17 2011  Tanaka Akira  <akr@fsij.org>

	* method.h, internal.h iseq.h: declare internal functions.

	* compile.c, eval.c, iseq.c, object.c, parse.y, proc.c, process.c,
	  thread.c, vm.c, vm_eval.c, vm_insnhelper.c, vm_method.c: don't
	  declare internal functions.

	  Note that rb_method_entry_eq() is defined in vm_method.c but
	  there was a declaration in proc.c with different const-ness.
	  Now it is declared in method.h with same const-ness to the
	  definition.
